@@ -6,6 +6,7 @@
 	* Fix parse of \# syntax with space for type LOC.
 	* Fix ldns_dname_absolute for escape sequences, fixes some parse errs.
 	* bugfix #297: linking ssl, bug due to patch submitted as #296.
+	* ldns-compare-zones -s to not exclude SOA record from comparison.
 
 1.6.4	2010-01-20
 	* Imported pyldns contribution by Zdenek Vasicek and Karel Slany.
